Do not use deprecated charset field anymore